--- a/administration/governing_body/governing_body.html
+++ b/administration/governing_body/governing_body.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSRs - Nabadwip Vidyasagar College</title>
-    <link rel="stylesheet" href="ssrs.css">
+    <title>Governing Body - Nabadwip Vidyasagar College</title>
+    <link rel="stylesheet" href="governing_body.css">
     <link rel="shortcut icon"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQng0Fk4I5N9F58NRajUuqosjR7gjKq-zzzyp8vdr7D3G5oydCUeYGQiTTqPtflpa-gKlM&usqp=CAU"
         type="image/x-icon">
@@ -20,28 +20,28 @@
                 <h3 id="time_date"></h3>
             </div>
             <div class="first_nav_elem">
-                <a href="../nirf/nirf.html">NIRF</a>
+                <a href="../../nirf/nirf.html">NIRF</a>
             </div>
             <div class="first_nav_elem">
                 <a href="#">IQAC</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../nacc/nacc.html">NACC</a>
+                <a href="../../nacc/nacc.html">NACC</a>
             </div>
             <div class="first_nav_elem">
-                <a href="./ssrs.html">SSRs</a>
+                <a href="../../ssrs/ssrs.html">SSRs</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../rusa/rusa.html">RUSA</a>
+                <a href="../../rusa/rusa.html">RUSA</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../tender/tender.html">Tender</a>
+                <a href="../../tender/tender.html">Tender</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../rti/rti.html">RTI</a>
+                <a href="../../rti/rti.html">RTI</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../aishe certificate/aishe_certificate.html">AISHE Certificates</a>
+                <a href="../../aishe certificate/aishe_certificate.html">AISHE Certificates</a>
             </div>
             <div class="first_nav_elem">
                 <a href="#">Sitemap</a>
@@ -54,10 +54,10 @@
             </div>
             <div class="college_logo_part2">
                 <div class="call_of_paper_div">
-                    <h4 id="clp"><a href="../1682498131-Inviting_paper_for_NVC_Teacher's_journal.pdf">Call of Paper</a></h4>
+                    <h4 id="clp"><a href="../../1682498131-Inviting_paper_for_NVC_Teacher's_journal.pdf">Call of Paper</a></h4>
                 </div>
                 <div class="online_admission_div">
-                    <h4 id="clp"><a href="../online_admission_page/admission_portal.html">Online Admission Portal</a></h4>
+                    <h4 id="clp"><a href="../../online_admission_page/admission_portal.html">Online Admission Portal</a></h4>
                 </div>
             </div>
         </div>
@@ -65,14 +65,14 @@
         <div class="second_nav">
             <i class="ri-menu-fill"></i>
             <ul>
-                <li><a href="../index.html">Home</a><i class="ri-arrow-down-s-line"></i><i
+                <li><a href="../../index.html">Home</a><i class="ri-arrow-down-s-line"></i><i
                         class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_1">
                         <ul>
-                            <li><a href="../home/history_of_college/history_of_college.html">History of College</a></li>
-                            <li><a href="../home/principal_message/principal_message.html">Principal's Message</a></li>
+                            <li><a href="../../home/history_of_college/history_of_college.html">History of College</a></li>
+                            <li><a href="../../home/principal_message/principal_message.js">Principal's Message</a></li>
                             <li><a href="#">Amis & Objectivies</a></li>
-                            <li><a href="../home/vision_mission/vision_mission.html">Vission & Mission</a></li>
+                            <li><a href="../../home/vision_mission/vision_mission.html">Vission & Mission</a></li>
                         </ul>
                     </div>
                 </li>
@@ -80,10 +80,10 @@
                         class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_2">
                         <ul>
-                            <li><a href="../administration/governing_body/governing_body.html">Governing Body</a></li>
-                            <li><a href="../administration/code_of_contuct/CODE-OF-CONDUCT.pdf">Code Of Conduct</a></li>
-                            <li><a href="../administration/code_of_contuct/Organogram-Nabadwip-Vidyasagar-College.pdf">Governance</a></li>
-                            <li><a href="../administration/institutional_policies/institutional_policies.html">Institutional Policies</a></li>
+                            <li><a href="governing_body.html">Governing Body</a></li>
+                            <li><a href="../code_of_contuct/CODE-OF-CONDUCT.pdf">Code Of Conduct</a></li>
+                            <li><a href="../code_of_contuct/Organogram-Nabadwip-Vidyasagar-College.pdf">Governance</a></li>
+                            <li><a href="../institutional_policies/institutional_policies.html">Institutional Policies</a></li>
                             <li><a href="#">Sub-Committe</a></li>
                         </ul>
                     </div>
@@ -260,19 +260,110 @@
         <i id="icon2" class="ri-arrow-right-s-fill"></i>
     </div>
     <div class="main">
-        <div class="ssrs_main">
-            <div class="ssrs_heading">
-                SSRs
+        <div class="governing_body">
+            <div class="governing_body_heading">
+                Governing Body
             </div>
-            <div class="ssrs_2nd_div">
-                <div class="first_part">
-                    <div class="ssr_2nd_cycle"><a href="SSR-2015.pdf" target="_blank">SSR 2nd Cycle</a></div>
-                </div>
-                <div class="second_part">
-                    <div class="ssr_3rd_cycle"><a href="SSR-3rd-Cycle-MAY-2023.pdf" target="_blank">SSR 3rd Cycle</a></div>
-                    <div class="ssr_documents_3rd_cycle"><a href="#">SSR Documents 3rd Cycle</a></div>
-                </div>
-            </div>
+            <span>Governing Body</span>
+            <table>
+                <tr>
+                    <td>
+                        Sr.No.</td>
+                    <td>GB Post</td>
+                    <td>Name of President/Member</td>
+                    <td>Capacity</td>
+                    <td>Contact No.</td>
+                    <td>Email Id</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>President</td>
+                    <td>SRI BIMAN KRISHNA SAHA</td>
+                    <td>President</td>
+                    <td>9332422704</td>
+                    <td>nvcollege1942@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Member</td>
+                    <td>SWAPAN KUMAR ROY</td>
+                    <td>Member Secretary</td>
+                    <td>9434179853</td>
+                    <td>swapan651@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Member</td>
+                    <td>DR. HEMANTA BHATTACHARJEE</td>
+                    <td>State Government Nominee</td>
+                    <td>1234567890</td>
+                    <td>nvcollege1942@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Member</td>
+                    <td>DR. PRASENJIT DEY</td>
+                    <td>Affiliating University Nominee</td>
+                    <td>1234567890</td>
+                    <td>nvcollege1942@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Member</td>
+                    <td>DR. SARMISTHA MAITY</td>
+                    <td>Affiliating University Nominee</td>
+                    <td>1234567890</td>
+                    <td>nvcollege1942@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Member</td>
+                    <td>AKHIL SARKAR</td>
+                    <td>Teacher Representative</td>
+                    <td>9547058303</td>
+                    <td>akhilsarkar38@yahoo.in</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Member</td>
+                    <td>DR. CHANDRIMA BASU</td>
+                    <td>Teacher Representative</td>
+                    <td>9433251124</td>
+                    <td>chandrimabasu54@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Member</td>
+                    <td>PIJUSH BHADRA</td>
+                    <td>Teacher Representative</td>
+                    <td>9800155155</td>
+                    <td>pijushbhadra58@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Member</td>
+                    <td>SIBA PRASAD CHAKRABORTY</td>
+                    <td>Teacher Representative</td>
+                    <td>9434661272</td>
+                    <td>chakrabartisibaprasad@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Member</td>
+                    <td>ASHOK DEY</td>
+                    <td>Non-Teacher Representative</td>
+                    <td>9932363710</td>
+                    <td>deyashok52@yahoo.com</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>Member</td>
+                    <td>JOYDEB DAS</td>
+                    <td>Non-Teacher Representative</td>
+                    <td>9153716072</td>
+                    <td>nvcollege1942@gmail.com</td>
+                </tr>
+            </table>
         </div>
     </div>
     <div class="footer">
@@ -282,14 +373,15 @@
                 <div class="map">
                     <a href="https://www.google.com/maps/place/Nabadwip+Vidyasagar+College/@23.409259,88.3618086,17z/data=!3m1!4b1!4m6!3m5!1s0x39f91da7d94081bd:0x62092d4e6edf1ee9!8m2!3d23.4092541!4d88.3643889!16s%2Fm%2F0j282h0?entry=ttu"
                         target="_blank">
-                        <img src="map3.png" alt="">
+                        <img src="../map3.png" alt="">
                         <a id="map_link"
                             href="https://www.google.com/maps/place/Nabadwip+Vidyasagar+College/@23.409259,88.3618086,17z/data=!3m1!4b1!4m6!3m5!1s0x39f91da7d94081bd:0x62092d4e6edf1ee9!8m2!3d23.4092541!4d88.3643889!16s%2Fm%2F0j282h0?entry=ttu">View
                             larger map</a>
                         <div class="keybord">
                             <i class="ri-keyboard-box-line"></i>
                         </div>
-                        <div class="maps_data_terms"><span>Map data &copy;2023</span><span>Terms</span><span>Report a
+                        <div class="maps_data_terms"><span>Map data &copy;2023</span><span>Terms</span><span>Report
+                                a
                                 map error</span></div>
                     </a>
                 </div>
@@ -297,7 +389,8 @@
             <div class="mail_visitor_box">
                 <div class="nabadwip_vidyasagar_college">Nabadwip Vidyasagar College</div>
                 <div class="mail_location_contact">
-                    <div id="location"><i class="ri-map-pin-2-fill"></i>Pacca Tole Road, Nabadwip, Nadia – 741302</div>
+                    <div id="location"><i class="ri-map-pin-2-fill"></i>Pacca Tole Road, Nabadwip, Nadia – 741302
+                    </div>
                     <div id="contact"><i class="ri-phone-fill"></i>03472 240014</div>
                     <div id="mail"><i class="ri-mail-fill"></i>nvcollege1942@gmail.com</div>
                 </div>
@@ -344,7 +437,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
         integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="ssrs.js"></script>
+    <script src="governing_body.js"></script>
 </body>
 
 </html>
