--- a/administration/institutional_policies/institutional_policies.html
+++ b/administration/institutional_policies/institutional_policies.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSRs - Nabadwip Vidyasagar College</title>
-    <link rel="stylesheet" href="ssrs.css">
+    <title>Institutional Policies - Nabadwip Vidyasagar College</title>
+    <link rel="stylesheet" href="institutional_policies.css">
     <link rel="shortcut icon"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQng0Fk4I5N9F58NRajUuqosjR7gjKq-zzzyp8vdr7D3G5oydCUeYGQiTTqPtflpa-gKlM&usqp=CAU"
         type="image/x-icon">
@@ -20,28 +20,28 @@
                 <h3 id="time_date"></h3>
             </div>
             <div class="first_nav_elem">
-                <a href="../nirf/nirf.html">NIRF</a>
+                <a href="../../nirf/nirf.html">NIRF</a>
             </div>
             <div class="first_nav_elem">
                 <a href="#">IQAC</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../nacc/nacc.html">NACC</a>
+                <a href="../../nacc/nacc.html">NACC</a>
             </div>
             <div class="first_nav_elem">
-                <a href="./ssrs.html">SSRs</a>
+                <a href="../../ssrs/ssrs.html">SSRs</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../rusa/rusa.html">RUSA</a>
+                <a href="../../rusa/rusa.html">RUSA</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../tender/tender.html">Tender</a>
+                <a href="../../tender/tender.html">Tender</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../rti/rti.html">RTI</a>
+                <a href="../../rti/rti.html">RTI</a>
             </div>
             <div class="first_nav_elem">
-                <a href="../aishe certificate/aishe_certificate.html">AISHE Certificates</a>
+                <a href="../../aishe certificate/aishe_certificate.html">AISHE Certificates</a>
             </div>
             <div class="first_nav_elem">
                 <a href="#">Sitemap</a>
@@ -54,10 +54,10 @@
             </div>
             <div class="college_logo_part2">
                 <div class="call_of_paper_div">
-                    <h4 id="clp"><a href="../1682498131-Inviting_paper_for_NVC_Teacher's_journal.pdf">Call of Paper</a></h4>
+                    <h4 id="clp"><a href="../../1682498131-Inviting_paper_for_NVC_Teacher's_journal.pdf">Call of Paper</a></h4>
                 </div>
                 <div class="online_admission_div">
-                    <h4 id="clp"><a href="../online_admission_page/admission_portal.html">Online Admission Portal</a></h4>
+                    <h4 id="clp"><a href="../../online_admission_page/admission_portal.html">Online Admission Portal</a></h4>
                 </div>
             </div>
         </div>
@@ -65,14 +65,14 @@
         <div class="second_nav">
             <i class="ri-menu-fill"></i>
             <ul>
-                <li><a href="../index.html">Home</a><i class="ri-arrow-down-s-line"></i><i
+                <li><a href="../../index.html">Home</a><i class="ri-arrow-down-s-line"></i><i
                         class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_1">
                         <ul>
-                            <li><a href="../home/history_of_college/history_of_college.html">History of College</a></li>
-                            <li><a href="../home/principal_message/principal_message.html">Principal's Message</a></li>
+                            <li><a href="../../home/history_of_college/history_of_college.html">History of College</a></li>
+                            <li><a href="../../home/principal_message/principal_message.html">Principal's Message</a></li>
                             <li><a href="#">Amis & Objectivies</a></li>
-                            <li><a href="../home/vision_mission/vision_mission.html">Vission & Mission</a></li>
+                            <li><a href="../../home/vision_mission/vision_mission.html">Vission & Mission</a></li>
                         </ul>
                     </div>
                 </li>
@@ -80,10 +80,10 @@
                         class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_2">
                         <ul>
-                            <li><a href="../administration/governing_body/governing_body.html">Governing Body</a></li>
-                            <li><a href="../administration/code_of_contuct/CODE-OF-CONDUCT.pdf">Code Of Conduct</a></li>
-                            <li><a href="../administration/code_of_contuct/Organogram-Nabadwip-Vidyasagar-College.pdf">Governance</a></li>
-                            <li><a href="../administration/institutional_policies/institutional_policies.html">Institutional Policies</a></li>
+                            <li><a href="../../administration/governing_body/governing_body.html">Governing Body</a></li>
+                            <li><a href="../../administration/code_of_contuct/CODE-OF-CONDUCT.pdf">Code Of Conduct</a></li>
+                            <li><a href="../../administration/code_of_contuct/Organogram-Nabadwip-Vidyasagar-College.pdf">Governance</a></li>
+                            <li><a href="institutional_policies.html">Institutional Policies</a></li>
                             <li><a href="#">Sub-Committe</a></li>
                         </ul>
                     </div>
@@ -260,18 +260,51 @@
         <i id="icon2" class="ri-arrow-right-s-fill"></i>
     </div>
     <div class="main">
-        <div class="ssrs_main">
-            <div class="ssrs_heading">
-                SSRs
+        <div class="Vision_Mission">
+            <div class="Vision_Mission_heading">
+                Institutional Policies
             </div>
-            <div class="ssrs_2nd_div">
-                <div class="first_part">
-                    <div class="ssr_2nd_cycle"><a href="SSR-2015.pdf" target="_blank">SSR 2nd Cycle</a></div>
-                </div>
-                <div class="second_part">
-                    <div class="ssr_3rd_cycle"><a href="SSR-3rd-Cycle-MAY-2023.pdf" target="_blank">SSR 3rd Cycle</a></div>
-                    <div class="ssr_documents_3rd_cycle"><a href="#">SSR Documents 3rd Cycle</a></div>
-                </div>
+            <div class="Vision_Mission_2nd_part">
+                <span>The college pursues its vision and mission through specific policy parameters.</span>
+                <span>The Governing Body is the ultimate policy maker and it implements the policies of the government as well.</span>
+              <strong>Financial Policy:</strong>
+
+              <span>Finance Sub-Committee takes all the decisions as per the policies of the institution.</span>
+              <ul>
+                <li>FSC allots funds for different aspects and developments of the college</li>
+                <li>Departments/Sections send their requisitions  to the principal</li>
+                <li>Principal forwards them to the FSC and other proper sub-committees</li>
+              </ul>
+
+              <strong>Academic policy:</strong>
+              <span>The institution prioritizes the academic aspect. ·</span>
+
+                <ul>
+                    <li>To continually enhance the efficiency of the faculty by distributing
+                    </li>
+                    <li>To maintain a well-equipped Library and E–Resources.</li>
+                    <li>To offer flexibility in the curriculum for the students in tune with the CBCS</li>
+                    <li>To expand the academic environments</li>
+                    <li>o make sure of the execution of the syllabi</li>
+                    <li>To offer newspapers, journals, and their digital access to the students through the library</li>
+                </ul>
+                <strong>Administrative Policy:</strong>
+              <span>Nabadwip Vidyasagar College offers a balanced administrative structure to maintain a smooth administration and the execution of the policies by</span>
+
+                <ul>
+                    <li>Forming Governing Body as per Government guidelines</li>
+                    <li>Ensuring the post of Principal to be filled  up</li>
+                    <li>Making  the Government Body responsible for the proper authority of Central and State Governments</li>
+                    <li>Making  the Government Body responsible for constituting Sub-Committees and other important committees as per guidelines</li>
+                    <li>Ensuring  the representation of students, teachers, and non-teaching staff of the college in GB</li>
+                </ul>
+                <strong>Infrastructural Policy:</strong>
+
+                <span>Nabadwip Vidyasagar College tries to offer suitable academic facilities through the continuous expansion of its infrastructure by</span>
+                <ul>
+                  <li>Continuously meeting with needs of classrooms, ICT-enabled and Semi-Smart rooms</li>
+                  <li>Meeting the growing need for computers, laptops, and printers for students, faculty and office</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -282,7 +315,7 @@
                 <div class="map">
                     <a href="https://www.google.com/maps/place/Nabadwip+Vidyasagar+College/@23.409259,88.3618086,17z/data=!3m1!4b1!4m6!3m5!1s0x39f91da7d94081bd:0x62092d4e6edf1ee9!8m2!3d23.4092541!4d88.3643889!16s%2Fm%2F0j282h0?entry=ttu"
                         target="_blank">
-                        <img src="map3.png" alt="">
+                        <img src="../map3.png" alt="">
                         <a id="map_link"
                             href="https://www.google.com/maps/place/Nabadwip+Vidyasagar+College/@23.409259,88.3618086,17z/data=!3m1!4b1!4m6!3m5!1s0x39f91da7d94081bd:0x62092d4e6edf1ee9!8m2!3d23.4092541!4d88.3643889!16s%2Fm%2F0j282h0?entry=ttu">View
                             larger map</a>
@@ -344,7 +377,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
         integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="ssrs.js"></script>
+    <script src="institutional_policies.js"></script>
 </body>
 
 </html>
