--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
                             <li><a href="home/history_of_college/history_of_college.html">History of College</a></li>
                             <li><a href="home/principal_message/principal_message.html">Principal's Message</a></li>
                             <li><a href="#">Amis & Objectivies</a></li>
-                            <li><a href="home/vision_mission/vision_mission.html">Vision & Mission</a></li>
+                            <li><a href="home/vision_mission/vision_mission.html" target="_blank">Vision & Mission</a></li>
                         </ul>
                     </div>
                 </li>
                  <li><a href="#">Administration</a><i class="ri-arrow-down-s-line"></i><i class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_2">
                         <ul>
-                            <li><a href="#">Governing Body</a></li>
-                            <li><a href="#">Code Of Conduct</a></li>
-                            <li><a href="#">Governance</a></li>
-                            <li><a href="#">Institutional Policies</a></li>
+                            <li><a href="administration/governing_body/governing_body.html">Governing Body</a></li>
+                            <li><a href="administration/code_of_contuct/CODE-OF-CONDUCT.pdf">Code Of Conduct</a></li>
+                            <li><a href="administration/code_of_contuct/Organogram-Nabadwip-Vidyasagar-College.pdf" target="_blank">Governance</a></li>
+                            <li><a href="./administration/institutional_policies/institutional_policies.html" target="_blank">Institutional Policies</a></li>
                             <li><a href="#">Sub-Committe</a></li>
                         </ul>
                     </div>
