--- a/rti/rti.html
+++ b/rti/rti.html
@@ -80,10 +80,10 @@
                         class="ri-arrow-up-s-fill up_arrow"></i>
                     <div class="sub_menu_2">
                         <ul>
-                            <li><a href="#">Governing Body</a></li>
-                            <li><a href="#">Code Of Conduct</a></li>
-                            <li><a href="#">Governance</a></li>
-                            <li><a href="#">Institutional Policies</a></li>
+                            <li><a href="../administration/governing_body/governing_body.html">Governing Body</a></li>
+                            <li><a href="../administration/code_of_contuct/CODE-OF-CONDUCT.pdf">Code Of Conduct</a></li>
+                            <li><a href="../administration/code_of_contuct/Organogram-Nabadwip-Vidyasagar-College.pdf">Governance</a></li>
+                            <li><a href="../administration/institutional_policies/institutional_policies.html">Institutional Policies</a></li>
                             <li><a href="#">Sub-Committe</a></li>
                         </ul>
                     </div>
