--- a/online_admission_page/admission_portal.html
+++ b/online_admission_page/admission_portal.html
@@ -29,16 +29,16 @@
             <div class="main_right_part">
                 <div class="helpline_part"><span>HELPLINE : +91 7365098574, 7365098575 (10:00AM TO 5:00PM ) (College Helpline No. : 03472-291110)</span></div>
                 <div class="header_part">
-                    <div class="header_part1"><a href="University Rule.pdf">University Admission Rule</a></div>
-                    <div class="header_part2"><a href="#">Download Form</a></div>
-                    <div class="header_part3"><a href="#">Final Merit List</a></div>
+                    <div id="head_part" class="header_part1"><a href="University Rule.pdf">University Admission Rule</a></div>
+                    <div id="head_part" class="header_part2"><a href="#">Download Form</a></div>
+                    <div id="head_part" class="header_part3"><a href="#">Final Merit List</a></div>
                 </div>
                 <div class="main_part">
                     <div class="ug_section"><a href="#">Click Here for  UG Section</a>
-                        <div class="underline1"></div>
+                        <div id="underline" class="underline1"></div>
                     </div>
                     <div class="pg_section"><a href="#">Click Here for  PG Section</a>
-                        <div class="underline2"></div>
+                        <div id="underline" class="underline2"></div>
                     </div>
                 </div>
             </div>
